add meta tags and css change on program page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/image.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Junior Athletics</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/image.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Junior Athletics</title>
+  <meta name="keywords"
+    content="Youth basketball, Basketball development programs, Mississauga Ontario, Youth basketball programs, Basketball training, Basketball skills, Youth basketball academy, Basketball camps, Basketball clinics, Basketball coaching, Youth sports Mississauga, Kids basketball Mississauga, Basketball for children, Basketball teamwork, Basketball confidence building, Basketball discipline, Basketball focus, Children's sports Mississauga, Basketball classes Mississauga, Youth basketball skills, Youth basketball leagues, Basketball skills development, Basketball fundamentals, Youth sports development, Youth basketball coaching, Basketball drills, Basketball for kids, Basketball for beginners, Youth basketball teams, Basketball tournaments Mississauga, Basketball practice, Basketball skills training, Basketball coaching Mississauga, Basketball skills camp, Youth basketball leagues Mississauga, Basketball programs for kids, Youth basketball drills, Basketball team training, Basketball skills clinics, Youth basketball training programs, Youth basketball skills development, Basketball classes for kids, Basketball lessons Mississauga, Youth basketball instruction, Basketball coaching for kids, Youth basketball programs Mississauga, Basketball camps Mississauga Ontario, Youth basketball leagues Ontario, Basketball training Mississauga, Youth basketball clinics, Empowering girls, Female athletics, Girls in sports, Basketball for girls, Girls basketball programs, Girls basketball development, Leadership skills for girls, Teamwork skills for girls, Confidence building for girls, Female coaches in basketball, Girls sports programs, Girls basketball leagues, Girls basketball camps, Girls basketball clinics, Benefits of girls athletics, Girls sports development, Girls basketball skills, Empowerment through sports, Girls basketball empowerment, Breaking gender stereotypes, Girls basketball training, Girls basketball coaching, Youth girls basketball, Girls basketball teams, Girls basketball skills development, Girls basketball instruction, Girls basketball tournaments, Girls basketball drills, Girls basketball practice, Girls basketball leagues Mississauga, Girls basketball camps Mississauga, Girls basketball clinics Mississauga, Girls sports leagues, Girls sports camps, Girls sports clinics, Benefits of girls basketball, Girls basketball fitness, Girls basketball exercises, Girls basketball techniques, Girls basketball strategy, Girls basketball competition, Girls basketball achievements, Girls basketball community, Girls basketball teamwork, Girls basketball leadership, Girls basketball inclusivity, Girls basketball diversity, Girls basketball confidence, Girls basketball self-esteem, Girls basketball empowerment, Rep Basketball, Youth basketball development, 1-on-1 training, Personalized basketball training, Basketball skill enhancement, Rep team tryouts, Basketball coaching for youth, Youth basketball skills, Youth basketball coaching, Basketball drills for youth, Youth basketball programs, Rep basketball preparation, Basketball training for young athletes, Youth basketball tryouts, Basketball skill development, Basketball techniques for youth, Youth basketball coaching programs, Rep basketball skills, Basketball court awareness, Youth basketball development programs, Basketball training programs, Basketball drills for Rep, Youth basketball skills development, Rep basketball coaching, Youth basketball training sessions, Basketball fundamentals training, Basketball shooting drills, Youth basketball leagues, Basketball conditioning drills, Rep basketball tryouts, Basketball defense drills, Basketball IQ development, Youth basketball skill clinics, Rep basketball strategies, Basketball agility drills, Youth basketball development academy, Basketball speed drills, Basketball footwork drills, Rep basketball season preparation, Basketball endurance training, Youth basketball fitness, Basketball practice sessions, Rep basketball team tactics, Basketball strength training, Youth basketball dribbling drills, Basketball teamwork drills, Rep basketball player development, Basketball mental preparation, Youth basketball competitive edge, Basketball game simulation, Rep basketball success tips, Basketball motivation training, Youth basketball performance improvement, Basketball positional skills, Rep basketball coaching strategies, Basketball leadership development, Youth basketball confidence building, Basketball endurance conditioning, Rep basketball skill evaluation, Basketball goal-setting techniques, Youth basketball tactical training, Basketball agility training, Rep basketball technique refinement, Basketball speed and agility, Youth basketball strategic planning, Basketball mental toughness training, Rep basketball game analysis, Basketball injury prevention, Youth basketball nutrition tips, Basketball recovery strategies" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
